change currency, translate and send mail

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-intl": "*"
     },
     "autoload": {
         "psr-4": {
